--- a/app/src/main/res/layout/activity_check_box.xml
+++ b/app/src/main/res/layout/activity_check_box.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="16dp"
     android:orientation="vertical"
-    tools:context=".CeckBoxActivity">
+    tools:context=".CheckBoxActivity">
 
     <TextView
         android:id="@+id/textView4"
